<resources>
    <string name="app_name">WhoseCat</string>
    <string name="auto_login">자동 로그인</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="sign_up_under">회원가입</string>
    <string name="prompt_email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="sign_in">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="check_mail">이메일 형식이 아닙니다.</string>
    <string name="empty_mail_pw">이메일 또는 비밀번호를 입력하세요.</string>
    <string name="email_hint">이메일</string>
    <string name="password_check">비밀번호 체크</string>
    <string name="name">이름</string>
    <string name="phone_number">핸드폰번호</string>
    <string name="sex">성별</string>
    <string name="male">남자</string>
    <string name="female">여자</string>
    <string name="birthday_hint">생년월일 ex)20150319</string>
    <string name="member_type">맴버</string>
    <string name="previous">이전</string>
    <string name="next">다음</string>
    <string name="id_input_error">아이디를 잘 못 입력하셨습니다.</string>
    <string name="pw_input_error">비밀번호 오류</string>
    <string name="info_input_error">정보 입력 오류</string>
    <string name="synchronizing">동기화중</string>
    <string name="baseUrl">http://ec2-52-78-116-210.ap-northeast-2.compute.amazonaws.com:3000</string>
    <string name="connectDevice">기기연결</string>
    <string name="modifyMemberInfo">회원 정보 수정</string>
    <string name="registerPet">팻 등록</string>
    <string name="logout">로그아웃</string>
    <string name="birthday">생년월일</string>
    <string name="date_signup">날짜</string>
    <string name="mypage_apply">적용</string>
    <string name="breed">종</string>
    <string name="weight">몸무게</string>
    <string name="pet_male">수컷</string>
    <string name="pet_female">암컷</string>
    <string name="register_picture">사진등록</string>
    <string name="add">등록</string>
    <string name="edit">수정</string>
    <string name="add_pet">팻 추가</string>
    <string name="edit_pet">팻 수정</string>
    <string name="pet_info_input_error">팻 정보 입력 오류</string>
    <string name="pet_none">중성</string>
    <string name="device">디바이스</string>
    <string name="none_device">디바이스가 없습니다.</string>
    <string name="scan">스캔</string>
    <string name="notification_title">동기화중</string>
    <string name="please_open_blue">블루투스를 켜 주세요</string>
    <string name="connecting">연결중</string>
    <string name="conect_fail_msg">연결 실패</string>
    <string name="sunVal">햇빛 노출량</string>
    <string name="vitamin_d">비타민 D 합성량</string>
    <string name="walk">산책량</string>
    <string name="exercise">운동량</string>
    <string name="rest">휴식량</string>
    <string name="kal">칼로리</string>
    <string name="step">걸음수</string>
    <string name="light">빛 공해량</string>
    <string name="water">수분량</string>
    <string name="age">나이</string>
    <string name="pet_setting">펫 설정</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="modify">수정</string>
    <string name="delete">삭제</string>
    <string name="submit">제출</string>
    <string name="reset">초기화</string>
    <string name="connectSuccess">연결성공</string>
    <string name="dataSyncSuccess">동기화 성공</string>
    <string name="existedDevice">등록된 기기</string>
    <string name="unknown">미등록 기기</string>
    <string name="day">일간</string>
    <string name="month">월간</string>
    <string name="year">연간</string>

    <string name="calendar_add_header">일정 추가</string>
    <string name="calendar_show_header">일정 보기</string>
    <string name="calendar_category_all">전체</string>
    <string name="calendar_category_hospital">동물병원</string>
    <string name="calendar_category_purchase_feed">사료구매</string>
    <string name="calendar_category_vaccination">약/예방접종</string>
    <string name="calendar_category_beauty">미용</string>
    <string name="calendar_category_bath">목욕</string>
    <string name="calendar_category_ect">기타</string>
    <string name="calendar_dialog_add">추가</string>
    <string name="calendar_dialog_cancel">취소</string>
    <string name="calendar_dialog_modify">수정</string>
    <string name="calendar_dialog_exit">나가기</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="factory_reset">공장 초기화</string>
    <string name="change_device">기기 변경</string>
    <string name="string_of">의</string>
    <string name="please_click_and_register">클릭하여 기기를 연결해주세요</string>
    <string name="disconnecting">연결끊김</string>
    <string name="must_connect">디바이스를 연결해 주세요</string>
    <string name="fail">실패</string>
    <string name="connect_fail">연결 실패</string>
    <string name="connect">연결</string>
    <string name="management_device">기기관리</string>
    <string name="show_password">비밀번호 표시</string>
    <string name="no_show_password">비밀번호 숨김</string>
    <string name="password_rule">8~16자, 특수기호 포함</string>
    <string name="cancel">취소</string>
    <string name="confirm">확인</string>
    <string name="weight_check">몸무게 측정</string>
    <string name="water_check">수분 측정</string>
    <string name="food_check">사료 측정</string>
    <string name="rest_walk_exercise">산책량|휴식량|운동량</string>
    <string name="uv">자외선 량</string>
    <string name="hour">시간</string>
    <string name="minute">분</string>
    <string name="exercise_goal">/01:24</string>
    <string name="walk_goal">/08:30</string>
    <string name="rest_goal">/14:06</string>
    <string name="ble_scan">블루투스기기 스캔</string>
    <string name="no_existed_device">등록된 디바이스가 없습니다.</string>
    <string name="no_unknown_device">미등록 기기가 없습니다.</string>
    <string name="alloc_image">사진을 등록해주세요</string>
    <string name="pet_register">펫 등록</string>
    <string name="today_water">금일수분량[ml]</string>
    <string name="water_input">수분량 입력</string>
    <string name="request_pet">펫을 등록해주세요.</string>
    <string name="daily_report">데일리 리포트</string>
    <string name="today_goal">오늘 목표 달성량</string>
    <string name="sun_point">햇볕 지수</string>
    <string name="low">\"낮음\"</string>
    <string name="exercise_point">활동 지수</string>
    <string name="vit_point">비타민 지수</string>
    <string name="middle">\"보통\"</string>
    <string name="high">\"높음\"</string>
    <string name="weight_title">의 몸무게 측정</string>
    <string name="weight_first">1. 체중계에 올라가 주세요.</string>
    <string name="weight_second">2. 측정 중 입니다.</string>
    <string name="weight_third">3. 측정 완료되었습니다.</string>
    <string name="caution">등록된 팻이 없습니다.</string>
    <string name="phone_number_hint">ex) 01012345678</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="add_pet_please">위 버튼을 눌러 팻을 등록해 주세요!</string>
</resources>