<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="petRegisterViewModelModel"
            type="com.jmsmart.whosecat.view.com.viewModel.PetRegisterViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="#eeeeee">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/pet_register"
            android:background="@color/colorPrimary"
            app:titleTextColor="@android:color/white"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:cardBackgroundColor="#ffffff"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="48dp"
                android:id="@+id/layout_puppy_info"
                android:orientation="vertical">
                <FrameLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:gravity="center">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_gravity="center"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/default_icon"
                        android:scaleType="centerCrop"
                        android:id="@+id/img_pet"
                        app:civ_border_color="@color/colorPrimary"
                        app:civ_border_width="3dp"/>
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="bottom|right"
                        android:src="@drawable/edit"
                        />
                </FrameLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/colorPrimary"
                    android:textSize="16dp"
                    android:layout_marginBottom="4dp"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:id="@+id/edit_pet_name"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="4dp">
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:id="@+id/edit_pet_weight"
                        android:inputType="number"
                        android:textSize="16dp"
                        app:backgroundTint="@color/colorPrimary"
                        android:hint="@string/weight"/>
                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/spinner_weight"
                        android:entries="@array/weight"/>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex"
                    android:textSize="16dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="4dp"/>
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/radio_pet"
                    android:layout_marginBottom="4dp">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radio_pet_male"
                        android:text="@string/pet_male"
                        android:textSize="16dp"
                        android:gravity="center"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radio_pet_female"
                        android:text="@string/pet_female"
                        android:textSize="16dp"
                        android:gravity="center"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radio_pet_none"
                        android:text="@string/pet_none"
                        android:textSize="16dp"
                        android:gravity="center"/>
                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16dp"
                    android:layout_marginTop="4dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_pet_date"
                    android:textSize="16dp"
                    app:backgroundTint="@color/colorPrimary"
                    android:hint="ex> 20180100"
                    android:inputType="number"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device"
                    android:textSize="16dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="4dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:layout_height="wrap_content"
                        android:id="@+id/edit_device"
                        android:textSize="16dp"
                        app:backgroundTint="@color/colorPrimary"
                        android:hint="@string/none_device"
                        android:enabled="false"
                        android:layout_marginBottom="4dp"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/scan"
                        android:onClick="@{()->petRegisterViewModelModel.scan()}"/>
                </LinearLayout>



            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="bottom"
                android:text="@string/add"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:textSize="16dp"
                android:paddingTop="12dp"
                android:paddingBottom="16dp"
                android:id="@+id/btn_next"/>

        </androidx.cardview.widget.CardView>



    </LinearLayout>

</layout>
