<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="myPageEditModel"
            type="com.jmsmart.whosecat.view.com.viewModel.MyPageEditViewModel"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#eeeeee">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:title="@string/modifyMemberInfo"
            app:titleTextColor="@android:color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#ffffff"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                app:contentPadding="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_email"
                        android:textSize="16dp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@={myPageEditModel.user.userEmail}"
                        android:textSize="16dp"
                        app:backgroundTint="@color/colorPrimary"
                        android:layout_marginBottom="20dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="16dp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="@{myPageEditModel.isModify}"
                        android:inputType="textPersonName"
                        app:backgroundTint="@color/colorPrimary"
                        android:text="@={myPageEditModel.user.name}"
                        android:textSize="16dp"
                        android:layout_marginBottom="20dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_number"
                        android:textSize="16dp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:enabled="@{myPageEditModel.isModify}"
                        android:text="@={myPageEditModel.user.phone}"
                        app:backgroundTint="@color/colorPrimary"
                        android:textSize="16dp"
                        android:layout_marginBottom="20dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sex"
                        android:textSize="16dp"
                        />
                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/radio_user">
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/mypage_radio_male"
                            android:enabled="@{myPageEditModel.isModify}"
                            app:backgroundTint="@color/colorPrimary"
                            android:text="@string/male"/>
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/mypage_radio_female"
                            app:backgroundTint="@color/colorPrimary"
                            android:enabled="@{myPageEditModel.isModify}"
                            android:text="@string/female"/>
                    </RadioGroup>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="@string/birthday"
                        android:textSize="16dp"
                        android:layout_marginTop="20dp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="@{myPageEditModel.isModify}"
                        android:text="@={myPageEditModel.user.birth}"
                        android:inputType="number"
                        android:textSize="16dp"
                        app:backgroundTint="@color/colorPrimary"
                        android:layout_marginBottom="20dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30dp"
                        android:text="@string/modify"
                        android:gravity="center"
                        android:textColor="@color/colorPrimary"
                        android:onClick="@{() -> myPageEditModel.onClick()}"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </LinearLayout>

</layout>
